ganti dikit nama didalam tabel sql
edit dikit nama databasenya biar ga eror