@@ -1,3 +1,22 @@
-create json file, then paste this:
+pake sql ini ya ges buat tabel user dan items
 
-"vmArgs": "--module-path \"D:\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-23.0.1\\lib\" --add-modules javafx.controls,javafx.fxml"
+CREATE TABLE `user` (
+  `User_id` VARCHAR(255) NOT NULL,
+  `username` VARCHAR(255) NOT NULL,
+  `password` VARCHAR(255) NOT NULL,
+  `phoneNumber` VARCHAR(255) NOT NULL,
+  `address` VARCHAR(255) NOT NULL,
+  `role` VARCHAR(255) NOT NULL
+);
+
+CREATE TABLE `items` (
+  `ItemID` VARCHAR(255) NOT NULL,
+  `ItemName` VARCHAR(255) NOT NULL,
+  `ItemSize` VARCHAR(255) NOT NULL,
+  `ItemPrice` VARCHAR(255) NOT NULL,
+  `ItemCategory` VARCHAR(255) NOT NULL,
+  `ItemStatus` VARCHAR(255) DEFAULT NULL,
+  `ItemWishlist` VARCHAR(255) DEFAULT NULL,
+  `ItemOfferStatus` VARCHAR(255) DEFAULT NULL,
+  PRIMARY KEY (`ItemID`)
+);
